Bug fix regarding z-index for select dropdown and closing select when new modal opens

--- a/src/_modal-backdrop.scss
+++ b/src/_modal-backdrop.scss
@@ -39,7 +39,7 @@ MODAL-BACKDROP
         color    : white;
       }
     &.working {
-        z-index: 99999 !important;
+        z-index: $zindex-working !important;
         i { display: block; }
     }
 }
